<resources>
    <string name="app_name">EarTrainR</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="prompt_username">prompt_username</string>
    <string name="prompt_password">prompt password</string>
    <string name="sign_in">Sign In</string>
    <string name="login_toggle_signin">I have existing credentials</string>
    <string name="login_toggle_signup">I want to sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_game1">Interval Detection</string>
    <string name="nav_game2">Game 2</string>
    <string name="nav_game3">Game 3</string>
    <string name="nav_game4">Game 4</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sub_header">Sub Header</string>
    <string name="nav_sub_item_1">subitem1</string>
    <string name="nav_sub_item_2">subitem2</string>
    <string name="profile_default_name">Raphael Kalker</string>
    <string name="friends">friends</string>
    <string name="nav_game">Games</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="sign_up">Sign up</string>
    <string name="error_invalid_password">Password is invalid</string>

    <string name="error_login_generic">Unable to establish credentials. Try again later.</string>
    <string name="nav_logout">Logout</string>
    <string name="preferences_file">eartrainer_prefs</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- FRAGMENT TITLES -->
    <string name="fragment_title_login">Login</string>
    <string name="fragment_title_profile">Profile</string>
    <string name="fragment_title_friendadd">Add a friend</string>
    <string name="hint_username">Type a username</string>

    <!-- ADD FRIEND FRAGMENT-->
    <string name="friend_add_searching">Searching...</string>
    <string name="friend_add_friend">Adding user as friend...</string>
    <string name="friend_add_successful">Successfully added as friend.</string>
    <string name="friend_add_not_found">Unable to find user.</string>
    <string name="friend_add_failed">Unable to add user, please try again.</string>


    <!-- STATUS MESSAGES-->
    <string name="status_creating_profile">Creating profile...</string>
    <string name="status_signing_up">Signing up...</string>
    <string name="status_auth_success">Authorization successful.</string>
    <string name="status_auth_progress">Authorizing...</string>
    <string name="fragment_title_game1">Game 1</string>
    <string name="friend_add_friend_deleted">Successfully removed friend.</string>
    <string name="fail_navigation">Failed to go to next screen.</string>
    <string name="btn_replay">Replay</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_end">End</string>
    <string name="btn_submit">Submit</string>
    <string name="game_next_game">Loading next game.</string>
    <string name="status_auth_failed">Authorization failed.</string>
    <string name="nav_leadership">Leader Board</string>
    <string name="fragment_title_leaderboard">Leader Board</string>
    <string name="fail_retrieve_items">Failed to retrieve items</string>
    <string name="leaderboard_username">Username:</string>
    <string name="leaderboard_total_score">Total Score:</string>

    <!-- GAMES -->
    <string name="game1">TOTAL SCORE</string>
    <string name="game2">INTERVAL TRAINING</string>
    <string name="game3">ERROR DETECTION</string>
    <string name="game4">CHORD PROGRESSIONS</string>

    <string-array name="game_classes">
        <item>Choose a game class...</item>
        <item>Major</item>
        <item>Minor</item>
        <item>Perfect</item>
        <item>Dim</item>
        <item>Aug</item>
    </string-array>

    <string-array name="game_size">
        <item>Choose a game size ...</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
    </string-array>
    <string name="title_activity_leader_board">LeaderBoardActivity</string>
    <string name="title_activity_game">Game</string>
    <string name="error_no_input">Please make a selection</string>
    <string name="error_wrong_answer">\"Answer not correct, try again!\"</string>
    <string name="nav_testing">Testing</string>

    <!--GCM-->
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this app.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
</resources>
